@startuml
!define JFrame java.awt.JFrame
!define JPanel java.awt.JPanel
!define JButton javax.swing.JButton
!define JLabel javax.swing.JLabel
!define BorderLayout java.awt.BorderLayout
!define GridLayout java.awt.GridLayout
!define Color java.awt.Color
!define Insets java.awt.Insets
!define ActionListener java.awt.event.ActionListener
!define ActionEvent java.awt.event.ActionEvent
!define SwingUtilities javax.swing.SwingUtilities
!define TitledBorder javax.swing.border.TitledBorder
!define BorderFactory javax.swing.BorderFactory
!define ImageIO javax.imageio.ImageIO
!define Image java.awt.Image
!define ImageIcon javax.swing.ImageIcon
!define JOptionPane javax.swing.JOptionPane
!define URL java.net.URL

class Main extends JFrame {
    - String player1
    - String player2
    - int altura
    - int largura
    - int navio1
    - int navio2
    - int[][] tabuleiro1
    - int[][] tabuleiro2
    - boolean turnoPlayer
    - JButton[][] buttons1
    - JButton[][] buttons2
    - JLabel infoLabel
    - JLabel naviosLabel
    - JButton resetButton

    + Main()
    - JPanel criarPainelTabuleiro(String, JButton[][])
    - void processarJogada(int[][], JButton[][], int, int, boolean)
    - void mostrarMensagemVitoria(String)
    - void resetGame()
    - static void inserirOsNavioNoTabuleiro()
    - static int[][] prepararTabuleiro()
    - static int[][] posicaoDosNavioNoTabuleiro()
    + static void main(String[])
}

class ButtonClickListener implements ActionListener {
    - int x
    - int y
    - boolean isPlayer1

    + ButtonClickListener(int, int, boolean)
    + void actionPerformed(ActionEvent)
}

class MenuInicial extends JFrame {
    + MenuInicial()
    - void iniciarJogo()
    - void mostrarRegras()
}

Main --> "1" ButtonClickListener : <<creates>>
Main --> "1" MenuInicial : <<uses>>

ButtonClickListener -up-|> ActionListener
@enduml